--- a/patch_rule.conf
+++ b/patch_rule.conf
@@ -2,7 +2,7 @@
 # FOS - Fools Of Security
 # 
 # Rule Written to patch the  security  issue  on Comodo Rules Set to block the payload mentioned on README.md 
-# If any error or  fasle positive detection because of  our rules, please create a issue on our repostories and we
+# If any error or  false positive detection because of our rules, please create a issue on our repostories and we
 # will fix the issue and update it with new rules.
 #
 # Tested on Apache/2.4.25 (Debian)
