--- a/patch_rule.conf
+++ b/patch_rule.conf
@@ -13,7 +13,7 @@
 
 SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|ARGS_NAMES|ARGS|XML:/* "@pm or and order by"\
 	"id:111111,chain,msg:'FOS WAF: Detects  basic SQL injection attempts||%{tx.domain}|%{tx.mode}|2',phase:2,block,logdata:'Matched Data: %{MATCHED_VAR} found within %{MATCHED_VAR_NAME}',t:none,rev:1,severity:2,tag:'UWAF',tag:'SQLi'"
-SecRule MATCHED_VAR "@rx (?i:(?:[\W\d]+\s*?(?:\|\||&)*(?:(\s+|[^\s]+))*(?:([\*\/]|[\d]))))" \
+SecRule MATCHED_VAR "@rx (?i:(?:[\W\d]+\s*?(?:or|and)*(?:(\s+|[^\s]+))*(?:([\*\/]|[\d]))))" \
 	"setvar:'tx.points=+%{tx.points_limit4}',setvar:'tx.sqli_points=+1',t:none,t:urlDecodeUni"
 
 
