--- a/patch_rule.conf
+++ b/patch_rule.conf
@@ -12,10 +12,10 @@
 # ----------------------------------------------------------------------------------
 
 SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|ARGS_NAMES|ARGS|XML:/* "@pm or and order by"\
-	"id:111111,chain,msg:'FOS WAF: Detects  basic SQL injection attempts||%{tx.domain}|%{tx.mode}|2',phase:2,block,logdata:'Matched Data: %{MATCHED_VAR} found within %{MATCHED_VAR_NAME}',t:none,rev:1,severity:2,tag:'UWAF',tag:'SQLi'"
+	"id:111111,chain,msg:'FOS WAF: Detects  basic SQL injection attempts||%{tx.domain}|%{tx.mode}|2',phase:2,block,logdata:'Matched Data: %{MATCHED_VAR} found within %{MATCHED_VAR_NAME}',t:none,rev:1,severity:2,tag:'FOS WAF',tag:'SQLi'"
 SecRule MATCHED_VAR "@rx (?i:(?:[\W\d]+\s*?(?:or|and)*(?:(\s+|[^\s]+))*(?:([\*\/]|[\d]))))" \
 	"setvar:'tx.points=+%{tx.points_limit4}',setvar:'tx.sqli_points=+1',t:none,t:urlDecodeUni"
 
 
 SecRule ARGS_NAMES|ARGS|XML:/* "@rx (?i:(?:[\W\d]+\s*?(?:\|\||&)*(?:(\s+|[^\s]+))*(?:([\*\/]|[\d]))))"\
-        "id:222222,msg:'FOS WAF: Detects  basic SQL injection attempts||%{tx.domain}|%{tx.mode}|2',phase:2,block,logdata:'Matched Data: %{MATCHED_VAR} found within %{MATCHED_VAR_NAME}',t:none,rev:1,severity:2,tag:'UWAF',tag:'SQLi'"
+        "id:222222,msg:'FOS WAF: Detects  basic SQL injection attempts||%{tx.domain}|%{tx.mode}|2',phase:2,block,logdata:'Matched Data: %{MATCHED_VAR} found within %{MATCHED_VAR_NAME}',t:none,rev:1,severity:2,tag:'FOS WAF',tag:'SQLi'"
